fixed firefox overlapping issue

--- a/public/css/main.styl
+++ b/public/css/main.styl
@@ -102,6 +102,7 @@ form input
         font-family UbuntuBold
 
 .tinner
+    overflow-y auto
     background-color white
     //border-radius 10px
     //border 1px solid #d4d4d4
@@ -129,3 +130,6 @@ form input
 
 .tmask
     background-color #E0E0E0
+
+.tmask, .tbox
+    z-index 1000
